--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8">
     <title>SPA Center - Beauty & Spa HTML Template</title>
@@ -65,17 +66,21 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+            <!--a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1>
-            </a>
+            </a-->
+			<figure class="shrink-0">
+				<img src="img/lagari2.svg" width="210" height="145">
+			</figure>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
+                    <a href="index.html" class="nav-item nav-link active">Inicio</a>                  
+                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+					 <a href="contact.html" class="nav-item nav-link">Contacto</a>
+					<a href="about.html" class="nav-item nav-link">About</a>
                     <a href="price.html" class="nav-item nav-link">Pricing</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -86,7 +91,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                   
                 </div>
                 <a href="" class="btn btn-primary d-none d-lg-block">Book Now</a>
             </div>
@@ -108,21 +113,22 @@
                     <img class="position-absolute w-100 h-100" src="img/carousel-a.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Cortes y Tiente</h3>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Salon & Spa LAGARI</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Cortes y Tintes</h3>
                             <p class="mx-md-5 px-5">Transformamos tu look con cortes modernos y tintes que brillan. ¡Realzamos tu estilo con técnicas profesionales y productos de primera calidad! ✨ Reserva ya</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <!--a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a-->
                         </div>
+
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
                     <img class="position-absolute w-100 h-100" src="img/carousel-b.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Maniquiury</h3>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Salon & Spa LAGARI</h6>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Manicure</h3>
                             <p class="mx-md-5 px-5">Manos perfectas y uñas impecables. 💖✨ Ofrecemos manicura, pedicura, esmaltado semipermanente, acrílicas y diseños personalizados. ¡Lucí uñas fabulosas todo el tiempo con productos de primera calidad! Reserva tu cita y consiente tus manos.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <!--a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a-->
                         </div>
                     </div>
                 </div>
@@ -130,10 +136,10 @@
                     <img class="position-absolute w-100 h-100" src="img/carousel-c.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Salon & Spa LAGARI</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Tratamientos facial</h3>
                             <p class="mx-md-5 px-5">Renueva tu piel con nuestros tratamientos faciales personalizados! 💆‍♀️✨ Desde limpiezas profundas hasta hidratación intensiva, usamos tecnología avanzada y productos premium para devolverle a tu rostro su brillo natural.</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <!--a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a-->
                         </div>
                     </div>
                 </div>
