--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>                  
                     <a href="service.html" class="nav-item nav-link">Servicios</a>
 					 <a href="contact.html" class="nav-item nav-link">Contacto</a>
-					<a href="about.html" class="nav-item nav-link">About</a>
+					<!--a href="about.html" class="nav-item nav-link">About</a>
                     <a href="price.html" class="nav-item nav-link">Pricing</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -89,7 +89,7 @@
                             <a href="opening.html" class="dropdown-item">Open Hours</a>
                             <a href="team.html" class="dropdown-item">Our Team</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
+                        </div-->
                     </div>
                    
                 </div>
