--- a/service.html
+++ b/service.html
@@ -65,15 +65,21 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+            <!--a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1>
-            </a>
+            </a-->
+			<figure class="shrink-0">
+				<img src="img/lagari2.svg" width="210" height="145">
+			</figure>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
+				     <a href="index.html" class="nav-item nav-link active">Inicio</a>                  
+                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+					 <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                    <!--a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link active">Services</a>
                     <a href="price.html" class="nav-item nav-link">Pricing</a>
@@ -88,7 +94,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary d-none d-lg-block">Book Now</a>
+                <a href="" class="btn btn-primary d-none d-lg-block">Book Now</a-->
             </div>
         </nav>
     </div>
