--- a/contact.html
+++ b/contact.html
@@ -65,15 +65,22 @@
     <!-- Navbar Start -->
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <a href="index.html" class="navbar-brand ml-lg-3">
+					<figure class="shrink-0">
+				<img src="img/lagari2.svg" width="210" height="145">
+			</figure>
+            <!--a href="index.html" class="navbar-brand ml-lg-3">
                 <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1>
-            </a>
+            </a-->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
+				    <a href="index.html" class="nav-item nav-link active">Inicio</a>                  
+                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+					 <a href="contact.html" class="nav-item nav-link">Contacto</a>
+					 
+                    <!--a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="price.html" class="nav-item nav-link">Pricing</a>
@@ -83,7 +90,7 @@
                             <a href="appointment.html" class="dropdown-item">Appointment</a>
                             <a href="opening.html" class="dropdown-item">Open Hours</a>
                             <a href="team.html" class="dropdown-item">Our Team</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="testimonial.html" class="dropdown-item">Testimonial</a-->
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
